--- a/css/style.css
+++ b/css/style.css
@@ -46,21 +46,26 @@ body {
 }
 
 /* Footer */
-
-.footer .container-fluid {
-    background-color: rgba(15, 15, 15, 0.466);
-    font-size: 18px;
-    font-family: 'Oswald', sans-serif;
-    height: 10vh;
+.footer {
+    background-color: rgba(19, 19, 19, 0.897);
 }
 
-.container-fluid p {
-    margin: 0;
+.footer .container-fluid {
+    font-size: 18px;
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .redes ul {
     list-style: none;
     display: flex;
+}
+
+.redes li {
+    padding: 1rem;
 }
 
 .redes i {
