--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,12 @@ body {
     margin: 1rem;
 }
 
+/* Unete - Formulario */
+
+.container form label, .container form button {
+    font-family: 'Oswald', sans-serif;
+}
+
 
 
 
