--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,15 @@ body {
     color: white;
 }
 
+@media (max-width: 1500px){
+    .grid {
+        grid-template-columns: 1fr 1fr;
+    }
 
+    .grid img {
+        width: 80%;
+    }
+}
 
 @media (max-width: 576px){
     .grid {
@@ -112,3 +120,4 @@ body {
         width: 85%;
     }
 }
+
